--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,16 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f2f2f2;
+    background-image: url('https://i.top4top.io/p_3099gu2100.jpg'); /* رابط صورة الخلفية */
+    background-size: cover;
+    background-position: center;
 }
 
 header {
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     text-align: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .profile-picture img {
@@ -25,23 +28,16 @@ header {
     justify-content: center;
     margin-top: 20px;
     padding: 20px;
-}
-
-.social-box {
     background-color: rgba(255, 255, 255, 0.8);
-    border-radius: 8px;
-    margin: 10px;
-    padding: 10px;
+    border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.social-box a {
-    color: #333333;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 16px;
+.social-box {
+    margin: 10px;
 }
 
-.social-box a:hover {
-    color: #007bff;
+.social-box a img {
+    width: 50px; /* تعديل حجم الأيقونات حسب الحاجة */
+    height: 50px;
 }
